--- a/index.html
+++ b/index.html
@@ -11,60 +11,67 @@
 <body>
     <div class="wrapper">
 
-        <div class="hero">
-            <div class="container">
-                <div class="hero__body">
-                    <hgroup>
-                        <h1 class="hero__title title-h1">Искусство <strong>создания сайтов и веб-приложений</strong>
-                        </h1>
-                        <p class="hero__text">Мы воплотим ваши самые амбициозные идеи в веб-реальность. Независимо от
-                            того, нужен вам новый <b>сайт</b>, переработка существующего проекта или анализ текущей
-                            эффективности вашего веб-присутствия - мы здесь, чтобы воплотить ваше видение в жизнь.</p>
-                    </hgroup>
-                </div>
-            </div>
-        </div>
+        <!-- Главный экран -->
+
+        <hgroup>
+            <h1 class="hero__title title-h1">Искусство <strong>создания сайтов и веб-приложений</strong>
+            </h1>
+            <p class="hero__text">Мы воплотим ваши самые амбициозные идеи в веб-реальность. Независимо от
+                того, нужен вам новый <b>сайт</b>, переработка существующего проекта или анализ текущей
+                эффективности вашего веб-присутствия - мы здесь, чтобы воплотить ваше видение в жизнь.</p>
+        </hgroup>
+
+        <!-- Услуги -->
 
         <section class="services">
-            <div class="container">
-                <div class="services__body">
-                    <div class="services__column">
-                        <hgroup>
-                            <h2 class="services__title title-h2">Услуги</h2>
-                            <p class="services__text">Добро пожаловать в мир <strong>веб-разработки</strong>, где каждый
-                                пиксель и каждая строка кода играют важную роль в <strong>создании
-                                    уникальных проектов</strong>. Наши услуги по веб-разработке предлагают возможность
-                                превратить ваши идеи в интерактивную реальность, где дизайн и
-                                функциональность сливаются в одно целое, вдохновляя и привлекая вашу
-                                аудиторию.</p>
-                        </hgroup>
+            <hgroup>
+                <h2 class="services__title title-h2">Услуги</h2>
+                <p class="services__text">Мы предоставляем разнообразные услуги в области веб-разработки, обеспечивая качество и инновации для ваших проектов. Наши услуги включают:</p>
+            </hgroup>
 
-                    </div>
-                    <div class="services__column">
-                        <div class="services__cards">
+            <article class="services__card">
+                <a class="services__card-link" href="#">
+                    <h3 class="services__card-title title-h3">Создать сайт</h3>
+                    <p class="services__card-text"><b>Разрабатка</b> от небольших
+                        <strong>сайтов-визиток и блогов до масштабных интернет-магазинов и корпоративных
+                            сайтов</strong>. Наша команда гарантирует высокий уровень <strong>адаптивности под мобильные
+                            устройства</strong>, обеспечивая отличный пользовательский опыт. Вне зависимости от вашей
+                        отрасли, мы создадим уникальное веб-пространство, сочетающее <strong>стильный дизайн</strong>
+                        эффективную функциональность и передовые технологии.
+                    </p>
+                </a>
+            </article>
 
-                            <article class="services__card">
-                                <a class="services__card-link" href="#">
-                                    <div>
-                                        <h3 class="services__card-title title-h3">Создать сайт</h3>
-                                        <p class="services__card-text">Разрабатываем от небольших
-                                            <strong>сайтов-визиток и блогов до масштабных интернет-магазинов и
-                                                корпоративных сайтов</strong>. Наша команда
-                                            гарантирует высокий уровень <strong>адаптивности под мобильные
-                                                устройства</strong>, обеспечивая отличный
-                                            пользовательский опыт. Вне зависимости от вашей отрасли, мы создадим
-                                            уникальное веб-пространство,
-                                            сочетающее <strong>стильный дизайн</strong>, эффективную функциональность и
-                                            передовые технологии.
-                                        </p>
-                                    </div>
-                                </a>
-                            </article>
+            <article class="services__card">
+                <a class="services__card-link" href="#">
+                    <h3 class="services__card-title title-h3">Доработка сайтов и исправление ошибок</h3>
+                    <p class="services__card-text">Оптимизация существующих проектов, <strong>исправление
+                            технических ошибок</strong> и улучшение общей производительности. Наша команда гарантирует
+                        <strong>быстрое реагирование</strong> на проблемы и предоставляет <strong>эффективные решения</strong>,
+                        поддерживая ваш веб-сайт в отличной форме.</p>
+                </a>
+            </article>
 
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <article class="services__card">
+                <a class="services__card-link" href="#">
+                    <h3 class="services__card-title title-h3">Консультирование и индивидуальное <b>обучение</b> по веб-технологиям</h3>
+                    <p class="services__card-text">Получите <strong>персональное консультирование и обучение</strong> в области веб-технологий
+                        от наших экспертов. Мы предлагаем <strong>индивидуальные сессии</strong>, где вы можете обсудить свои вопросы,
+                        получить рекомендации и наставничество от профессионалов в области веб-разработки. Независимо от того,
+                        нужно вам решить конкретную проблему или продвинуть свои навыки.</p>
+                </a>
+            </article>
+
+        </section>
+
+        <!-- Стек технологий -->
+
+        <section class="tech">
+            <hgroup>
+                <h2>Наш стек технологий</h2>
+                <p>Мы используем современные технологии для достижения высокого качества и эффективности веб-разработки. Наш опыт включает в себя следующие ключевые технологии:</p>
+            </hgroup>
+            
         </section>
 
     </div>
