--- a/index.html
+++ b/index.html
@@ -105,26 +105,78 @@
             </hgroup>
 
             <article class="tech__card">
-                <h3 class="h3">Разработка сайтов на <strong>Wordpress</strong></h3>
-                <p class="text">
-
-                </p>
+                <h3 class="h3">Разработка сайтов на <strong>WordPress</strong></h3>
+                <p class="text"><b>WordPress</b> – это универсальная и мощная система управления контентом (CMS), предоставляющая широкие возможности для создания и управления веб-сайтами.</p>
+                <section class="tech__card-adv">
+                    <h4 class="h4">Преимущества сайтов на WordPress</h4>
+                    <ul class="tech__card-list">
+                        <li>
+                            <p>
+                                <strong>Прост в использовании.</strong> Не требуется глубоких знаний в области программирования, чтобы управлять сайтом;
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <strong>Огромное сообщество.</strong> WordPress поддерживается огромным сообществом разработчиков и пользователей, что обеспечивает актуальность и поддержку плагинов, тем и обновлений;
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <strong>Множество готовых решений.</strong> Большое количество тем и плагинов делает WordPress идеальным выбором для различных типов веб-сайтов. Вы можете легко настроить внешний вид и функциональность вашего сайта, используя уже готовые решения.
+                            </p>
+                        </li>
+                    </ul>
+                </section>
             </article>
 
 
             <article class="tech__card">
                 <h3 class="h3">Создание веб-приложений на <strong>Vue</strong></h3>
-                <p class="text">
-
-                </p>
+                <p class="text">Vue.js – это современный JavaScript-фреймворк, предназначенный для создания прогрессивных веб-приложений с высокой производительностью и плавным пользовательским интерфейсом.</p>
+                <section class="tech__card-adv">
+                    <h4 class="h4">Особенности Vue.js</h4>
+                    <ul class="tech__card-list">
+                        <li>
+                            <p>
+                                <strong>Простота в изучении и использовании.</strong> Vue.js обеспечивает легкость в понимании и написании кода, что делает его отличным выбором для разработчиков разного уровня опыта.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <strong>Реактивность.</strong> Фреймворк следит за изменениями данных и автоматически обновляет пользовательский интерфейс, что делает ваши приложения более отзывчивыми и эффективными.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <strong>Компонентная структура.</strong> Vue.js построен на концепции компонентов, что упрощает создание модульных и масштабируемых веб-приложений.
+                            </p>
+                        </li>
+                    </ul>
+                </section>
             </article>
 
             <article class="tech__card">
                 <h3 class="h3">Разработка проекта на нативных технологиях. <strong>HTML, CSS, JS, PHP</strong></h3>
                 <p class="text">
-
+                    Разработка на нативных технологиях является основой для создания веб-проектов выдающегося качества и производительности. Используя нативные технологии, мы придаем вашему проекту неоспоримые преимущества:
                 </p>
+                <section class="tech__card-adv">
+                    <h4 class="h4">Преимущества разработки на нативных технологиях</h4>
+                    <ul class="tech__card-list">
+                        <li>
+                            <p>
+                                <strong>Гибкость.</strong> Использование HTML, CSS, JS и PHP предоставляет максимальную гибкость в создании уникальных и индивидуальных веб-проектов. Мы можем точно реализовать любые дизайнерские и функциональные концепции.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <strong>Высокая производительность.</strong> Использование нативных технологий обеспечивает высокую производительность вашего веб-проекта.
+                            </p>
+                        </li>
+                    </ul>
+                </section>
             </article>
+            
 
         </section>
 
